# alundra-randomizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wrap_file.cmake
release_package/: gen_permalink.bat  gen_preset.bat  personal_settings.json
release_package/presets/: default.json
src/: main.cpp  personal_settings.cpp  personal_settings.hpp  randomizer_options.cpp  randomizer_options.hpp  world_shuffler.cpp  world_shuffler.hpp  world_solver.cpp  world_solver.hpp
src/constants/: flags.hpp  item_codes.hpp  item_names.cpp  item_names.hpp  map_codes.hpp
src/game/: game_data.cpp  game_data.hpp  item.cpp  item.hpp  room_strings.cpp  room_strings.hpp
src/game/data/: item.json
src/io/: graphviz_writer.cpp  io.hpp  model_writer.cpp  spoiler_writer.cpp  world_json_parser.cpp
src/model/: hint_source.cpp  hint_source.hpp  item.cpp  item.hpp  item_distribution.hpp  item_source.cpp  item_source.hpp  randomizer_world.cpp  randomizer_world.hpp  world.cpp  world.hpp  world_node.cpp  world_node.hpp  world_path.cpp  world_path.hpp  world_region.cpp  world_region.hpp
src/model/data/: hint_source.json  item.json  item_source.json  item_sources_unused.json  world_node.json  world_path.json  world_region.json
src/patches/: game_patch.hpp  patch_adapt_blue_chest.hpp  patch_allow_using_consumables_while_full.hpp  patch_apply_hint_text.hpp  patch_apply_item_sources.hpp  patch_apply_items_info.hpp  patch_apply_options_on_world.hpp  patch_apply_shops_text.hpp  patch_change_flag_checks.hpp  patch_edit_credits.hpp  patch_edit_global_strings.hpp  patch_fix_item_names_in_textboxes.hpp  patch_fix_map_inconsistencies.hpp  patch_fix_throwables.hpp  patch_fix_wrong_map_transitions.hpp  patch_neutralize_flags.hpp  patch_neutralize_map_variant_changes.hpp  patch_new_game.hpp  patch_original_game_balance.hpp  patch_progressive_items.hpp  patch_remove_cutscenes.hpp  patch_remove_items_fanfare.hpp  patch_remove_music.hpp  patch_remove_nava_instances.hpp  patch_remove_useless_cephas.hpp  patch_remove_videos.hpp  patch_set_casino_win_count.hpp  patch_set_king_snow_death_count.hpp  patch_split_boots_effects.hpp  patches.cpp  patches.hpp
src/tools/: argument_dictionary.hpp  binary_file.cpp  binary_file.hpp  bitstream_reader.cpp  bitstream_reader.hpp  bitstream_writer.hpp  byte_array.cpp  byte_array.hpp  exception.hpp  flag.hpp  json.hpp  json_tools.hpp  mips_tools.cpp  mips_tools.hpp  psxexe_file.hpp  stringtools.hpp  textbox_formatter.cpp  textbox_formatter.hpp  vectools.hpp
